--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ a {
 
 .button-secondary {
   width: auto;
-  height: 24px;
+  height: auto;
   padding: 1rem;
   background-color: #f9f8ee;
   color: #1f1f1f;
